Bug #35654: * adjust styling for disabled widgets * adjust error icon * adjust styling for NumberSpinner * adjust paddings for TooltipDialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54863 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
@@ -126,6 +126,8 @@
 	padding: 4px;
 	box-sizing: content-box;
 }
+
+.umc .dijitTooltipDialog,
 .umc .dijitTooltip.dijitTooltipBelow {
 	/* leave room for arrow above content */
 	padding-top: 11px;
@@ -168,12 +170,16 @@
 	background-image:url($image-tooltip-ie6);
 }
 
+.umc .dijitTooltipDialog .dijitTooltipConnector,
 .claro .dijitTooltipBelow .dijitTooltipConnector {
 	/* the arrow piece for tooltips below an element */
 	top: -6px;
 	//left: 3px;
 	background-position:-41px -1px;
 
+}
+.umc .dijitTooltipDialog .dijitTooltipConnector {
+	left: 12px;
 }
 
 .claro .dijitTooltipAbove .dijitTooltipConnector {
