--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -102,6 +102,13 @@
 	//background-position: -160px 0;
 }
 
+.umc .dijitDisabled .dijitIcon,
+.umc .dijitDisabled .dijitArrowButtonInner,
+.umc .dijitDisabled .dijitButtonText {
+	opacity: 0.5 !important;
+}
+
+
 .claro .dijitButtonText {
 	padding: 0 0.3em;
 	text-align: center;
