--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Select.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Select.styl
@@ -49,6 +49,7 @@
 .claro .dijitSelect .dijitArrowButton .dijitArrowButtonInner {
 	//height:16px;
 	opacity: 1;
+	margin-top: 0;
 }
 
 /* hover status */
