--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -9,7 +9,7 @@ $grey-lightest ?= #f0f0f0;
 $grey-medium ?= #c8c8c8;
 $grey-dark ?= #6e6e6e;
 $disabled-color ?= #d3d3d3;												// Base for disabled backgrounds and borders
-$error-color ?= #be0000;
+$error-color ?= #db062e;
 $ucs-green ?= #7ab51d;
 $text-color-dark-background ?= #fff;
 
@@ -40,7 +40,7 @@ $gallery-border-color ?= #dcdcdc;
 
 $disabled-border-color ?= $disabled-color;								// Border color for disabled/readonly Button, TextBox etc. widgets
 $disabled-background-color ?= $secondary-color;							// Disabled button, textbox, etc.
-$disabled-text-color ?= #e6e6e6;											// Text color for disabled/readonly widgets
+$disabled-text-color ?= $text-color-lightest;											// Text color for disabled/readonly widgets
 
 $unselected-background-color ?= $secondary-color;							// Background color for unselected/unopened tab button, accordion pane, TitlePane, Menu items
 $unselected-text-color ?= darken($secondary-color, 65);										// Text color for unselected/unopened tab button, accordion pane, TitlePane, Menu items
