--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -128,6 +128,7 @@
 		box-shadow: none;
 		color: $text-color;
 		font-size: $font-size-medium;
+		opacity: 1 !important; /*overwrite generic disabled rule*/
 	}
 
 	.dijitDisabled #umcMenuHost .dijitArrowButtonInner {
