* Bug #35654: remove header from NewObjectDialog and adjust height
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54884 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/udm.css
+++ b/management/univention-management-console-module-udm/umc/js/udm.css
@@ -24,3 +24,8 @@
 .umc .umcPage .umcPageNav .umcImageUploader img {
 	max-height: 250px;
 }
+
+.umc .umcUdmNewObjectDialog .dijitStackContainer {
+	height: auto !important;
+	width: 500px;
+}
