* Bug #35654: adjust error icon, add search icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54887 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
@@ -53,6 +53,7 @@ icon-rule(Edit, -200, -40, expandRule: false, alternativeName: umcIconEdit);
 icon-rule(Report, -220, -40, expandRule: false, alternativeName: umcIconReport);
 icon-rule(Document, -220, -40, expandRule: false);
 icon-rule(Refresh, -240, -40, expandRule: false, alternativeName: umcIconRefresh);
+icon-rule(Search, -260, -40, expandRule: false);
 
 icon-rule(Play, -160, -60, expandRule: false, alternativeName: umcIconPlay);
 icon-rule(Pause, -180, -60, expandRule: false, alternativeName: umcIconPause);
