* Bug #35654: adjust generic padding of form fields
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54910 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
@@ -223,3 +223,8 @@
 .claro .dijitDialogUnderlay {
 	background: $dialog-underlay-color;
 }
+
+.umc .dijitDialog .umcPage > * {
+	padding-left: 0;
+	padding-right: 0;
+}
