--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -109,7 +109,7 @@ body.umc:not([class~=umcHeadless]) .umcModuleHeader {
 		padding: 0;
 	}
 
-	.umcTree {
+	.dijitTree {
 		max-height: 500px;
 		min-height: 250px;
 	}
