* Bug #36291: fixed handling of sizing for ComplexInput/MultiInput
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54924 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/inputsizes.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/inputsizes.styl
@@ -75,6 +75,11 @@ $twoColumnLayoutRules($minWidth, $maxWidth, $deviceClass, $nMinCols) {
 		padding-left: 0;
 		padding-right: 0;
 	}
+
+	.umcLabelPane-umcMultiInput,
+	.umcLabelPane-umcComplexInput {
+		display: block;
+	}
 }
 
 .umc .umcLayoutRow {
