--- a/services/univention-apache/css/header.styl
+++ b/services/univention-apache/css/header.styl
@@ -1,16 +1,21 @@
 #header-right {
-	float: right;
-	position: relative;
-	top: 20px;
+	//float: right;
+	position: absolute;
+	top: 5px;
+	right: 5px;
 	//display: inline;
-	right: 20;
+
 }
 
 #header-left {
-	float:left;
+	//float:left;
 	left: 0;
-	top: 20px;
-	position:relative;
+	//top: 20px;
+	position: absolute;
+	background: url(images/univention.svg) no-repeat 10px 12px;
+	height: 40px;
+	top: 0;
+	width: 200px;
 }
 
 #site-header {
@@ -35,3 +40,19 @@
 #title {
 	margin-bottom: 30px;
 }
+
+#site-title {
+	border-bottom: solid thin #282828 ;
+	padding-bottom: 5px;
+	margin-top: 10px;
+}
+
+#header-claim {
+	margin-top: 0px;
+	padding-top: 5px;
+	font-weight: normal;
+	font-size: 1em;
+}
+
+
+
