--- a/services/univention-apache/css/stickyfooter.styl
+++ b/services/univention-apache/css/stickyfooter.styl
@@ -1,6 +1,8 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 
+@import "variables";
+
 /* Wrapper for page content to push down footer */
 #wrapper {
 	min-height: 100%;
@@ -8,17 +10,37 @@
 
 /* Site footer with content */
 #footer {
-	height: 50px;
-	margin-top: -50px;
+	//height: 50px;
+	//margin-top: -20px;
 	clear: both;
+	position: relative;
+	bottom: 20px;
 
 	li {
 		display: inline;
-		padding-right: 1em;
+		//padding-right: 1em;
 	}
 
 	ul {
 		padding-left: 2em;
+		margin-left: -10px;
+
+		a {
+			text-decoration: none;
+			color: $primary-color;
+		}
+		a:hover {
+			color: $text-color;
+		}
+		li {
+			//float: left;
+			border-right: 1px solid $primary-color;
+			padding: 0 0.5em;
+			margin: -2px;
+		}
+		li:last-child {
+			border: none;
+		}
 	}
 }
 
