Bug #23665: fix image max-height
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54935 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/udm.css
+++ b/management/univention-management-console-module-udm/umc/js/udm.css
@@ -21,7 +21,7 @@
 	font-size: 1em;
 }
 
-.umc .umcPage .umcPageNav .umcImageUploader img {
+.umc .udmDetailPage .umcPageNav .umcImage img {
 	max-height: 250px;
 }
 
