--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/icons.styl
@@ -54,6 +54,7 @@ icon-rule(Report, -220, -40, expandRule: false, alternativeName: umcIconReport);
 icon-rule(Document, -220, -40, expandRule: false);
 icon-rule(Refresh, -240, -40, expandRule: false, alternativeName: umcIconRefresh);
 icon-rule(Search, -260, -40, expandRule: false);
+icon-rule(Shop, -280, -40, expandRule: false);
 
 icon-rule(Play, -160, -60, expandRule: false, alternativeName: umcIconPlay);
 icon-rule(Pause, -180, -60, expandRule: false, alternativeName: umcIconPause);
