* [WIP] adaption of ucs-overview : changed style of dropdown menu   (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54963 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/css/languagedropdown.styl
+++ b/services/univention-apache/css/languagedropdown.styl
@@ -1,4 +1,6 @@
-#dropDownButton {
+@import "variables";
+
+.dijitDropDownButton {
 	padding: 3px 6px 5px 6px;
 	cursor: pointer;
 
@@ -11,10 +13,8 @@
 	.dijitButtonNode {
 		border: none;
 	}
-}
 
-#dropDownButton:hover {
-	.dijitArrowButtonInner {
+	&:hover .dijitArrowButtonInner {
 		background: url(icons/icons.svg) -20px -220px no-repeat;
 		width: 20px;
 		height: 25px;
@@ -28,5 +28,5 @@
 	padding-bottom: 0px;
 	padding-left: 0.3em;
 	text-align: center;
-	font-size: 1.3em;
+	font-size: $font-size-medium;
 }
