* Bug #36310: underline button label when button is focussed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54975 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -131,6 +131,14 @@
 	box-shadow: 0 1px 4px rgba(0,0,0,0.25);
 }
 
+/* focused state */
+.umc .dijitButtonFocused .dijitButtonText,
+.umc .dijitDropDownButtonFocused .dijitButtonText,
+.umc .dijitComboButtonFocused .dijitButtonText,
+.umc .dijitToggleButtonFocused .dijitButtonText {
+	text-decoration: underline;
+}
+
 /* active, checked status */
 .claro .dijitButtonActive .dijitButtonNode, 
 .claro .dijitDropDownButtonActive .dijitButtonNode,
