--- a/services/univention-apache/css/stickyfooter.styl
+++ b/services/univention-apache/css/stickyfooter.styl
@@ -6,15 +6,18 @@
 /* Wrapper for page content to push down footer */
 #wrapper {
 	min-height: 100%;
+	padding-bottom: 85px;
 }
 
 /* Site footer with content */
 #footer {
-	//height: 50px;
+	//height: 20px;
+	width: 100%;
 	//margin-top: -20px;
 	clear: both;
-	position: relative;
-	bottom: 20px;
+	//position: relative;
+	position: absolute;
+	bottom: 0px;
 
 	li {
 		display: inline;
