--- a/services/univention-apache/css/document.styl
+++ b/services/univention-apache/css/document.styl
@@ -8,28 +8,31 @@
 
 html {
 	min-height: 100%;
+	position: relative;
 }
 
+body .umcBackground,
 body {
-	font-family: Clear Sans, Arial, Helvetica, sans-serif;
-	font-size: .75em;
-	color: $document-text-color;
-	min-height: 100%;
+	overflow-x: hidden;
 	/* Chrome,Safari4+ */
-	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%,#cdcdcd), color-stop(50%,#efefef), color-stop(100%,#cccccc));
+	background: url(images/background-tile.png) repeat, -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(179,179,179,1)), color-stop(31%, rgba(224,224,224,1)), color-stop(51%, rgba(240,240,240,1)), color-stop(61%, rgba(235,235,235,1)), color-stop(74%, rgba(224,224,224,1)), color-stop(100%, rgba(189,189,189,1)));
 	/* Chrome10+,Safari5.1+ */
-	background: url(images/background-tile.png) repeat, -webkit-linear-gradient(to right top, #cdcdcd 0%,#efefef 50%,#cccccc 100%);
+	background: url(images/background-tile.png) repeat, -webkit-linear-gradient(to right top, rgba(179,179,179,1) 0%, rgba(224,224,224,1) 31%, rgba(240,240,240,1) 51%, rgba(235,235,235,1) 61%, rgba(224,224,224,1) 74%, rgba(189,189,189,1) 100%);
 	/* W3C */
-	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, #cdcdcd 0%, #efefef 50%, #cccccc 100%)");
+	background: url(images/background-tile.png) repeat, unquote("linear-gradient(to right top, rgba(179,179,179,1) 0%, rgba(224,224,224,1) 31%, rgba(240,240,240,1) 51%, rgba(235,235,235,1) 61%, rgba(224,224,224,1) 74%, rgba(189,189,189,1) 100%)");
 }
 
+.dj_ie9 body .umcBackground,
+.dj_ie8 body .umcBackground,
 .dj_ie9 body,
 .dj_ie8 body {
 	/* fallback on horizontal gradient for IE8/9 */
-	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#cccccc',GradientType=1)");
+	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#f0f0f0', endColorstr='#b3b3b3',GradientType=1)");
 	background: #cdcdcd;
 }
 
+.dj_ie9 body:before .umcBackground,
+.dj_ie8 body:before .umcBackground,
 .dj_ie9 body:before,
 .dj_ie8 body:before {
 	/* add the repeating background for IE9 additionally */
@@ -39,6 +42,7 @@ body {
 	width: 100%;
 	height: 210px;
 }
+
 
 /* Headings */
 h1 {
