--- a/services/univention-apache/css/Menu.styl
+++ b/services/univention-apache/css/Menu.styl
@@ -182,3 +182,7 @@ There are three areas of styling for the Menu:
  .dijitMenuPreviousButton,  .dijitMenuNextButton {
 	font-style: italic;
 }
+
+.dijitPopup {
+	box-shadow: 0 1px 5px rgba(0,0,0,0.25);
+}
