Bug #36095: * adjusted styling of noscript tag * cleaned up html ids * added new javascript module for initial query string parsing
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55019 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/css/document.styl
+++ b/services/univention-apache/css/document.styl
@@ -49,14 +49,20 @@ h1 {
 	font-size: $font-size-medium;
 	//font-weight: bold;
 	margin-bottom: 0px;
-	//margin-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 10px;
+	border-bottom: solid thin #282828;
+}
+.no-js {
+	margin-top: -25px;
 }
 h2 { 
-	font-size: $font-size-medium;
+	font-size: 1em;
 	//line-height: 1.455em; 
-	//margin-top:1em; 
-	margin-bottom:0.60em;
-	font-weight: bold;
+	margin-top: 0; 
+	//margin-bottom:0.60em;
+	padding-top: 5px;
+	font-weight: normal;
 }
 h3, h4, h5, h6 {
 	font-size:1em; 
