--- a/services/univention-apache/css/header.styl
+++ b/services/univention-apache/css/header.styl
@@ -41,18 +41,17 @@
 	margin-bottom: 30px;
 }
 
-#site-title {
-	border-bottom: solid thin #282828 ;
-	padding-bottom: 5px;
-	margin-top: 10px;
-}
-
-#header-claim {
-	margin-top: 0px;
-	padding-top: 5px;
-	font-weight: normal;
-	font-size: 1em;
-}
+//#site-title {
+//	border-bottom: solid thin #282828 ;
+//	padding-bottom: 5px;
+//	margin-top: 10px;
+//}
+//#header-claim {
+//	margin-top: 0px;
+//	padding-top: 5px;
+//	font-weight: normal;
+//	font-size: 1em;
+//}
 
 
 
